# tsunami_projekt

./: .gitignore  .sconsign.dblite  CMakeLists.txt  README.md  README.rst  SConstruct  compile.sh  gitignore  nvcc.py  solution_0.csv  solution_1.csv  solution_10.csv  solution_11.csv  solution_12.csv  solution_13.csv  solution_14.csv  solution_15.csv  solution_16.csv  solution_17.csv  solution_18.csv  solution_19.csv  solution_2.csv  solution_20.csv  solution_21.csv  solution_22.csv  solution_23.csv  solution_24.csv  solution_25.csv  solution_26.csv  solution_27.csv  solution_28.csv  solution_29.csv  solution_3.csv  solution_30.csv  solution_31.csv  solution_32.csv  solution_33.csv  solution_34.csv  solution_35.csv  solution_36.csv  (+20 more)
.github/workflows/: main.yml
.sconf_temp/: conftest_df286a1d2f67e69d030b4eff75ca7e12_0_14b042259824e52737bf11dc8cb699a6
src/: DartConfiguration.tcl  SConscript  constants.h  main.cpp  tests.cpp
src/cuda/: a.out  cuda.cuh  cuda_solver.cu  cuda_solver.cuh
src/io/: Csv.cpp  Csv.h  NetCdf.cpp  NetCdf.h  NetCdf.test.cpp  NetCdf_Read.cpp  NetCdf_Read.h  NetCdf_Write.cpp  NetCdf_Write.h
src/patches/: WavePropagation.h  WavePropagation1d.cpp  WavePropagation1d.h  WavePropagation1d.test.cpp  WavePropagation2d.cpp  WavePropagation2d.cu  WavePropagation2d.h  WavePropagation2d.test.cpp  cuda_WavePropagation2d.cu  cuda_WavePropagation2d.cuh  cuda_WavePropagation2d.h  cuda_functions.cuh
src/setups/: ArtificialTsunami.cpp  ArtificialTsunami.h  CircularDamBreak2d.cpp  CircularDamBreak2d.h  DamBreak1d.cpp  DamBreak1d.h  DamBreak1d.test.cpp  Setup.h  (+14 more)
(+8 files in other folders)
